[tool.poetry]
name = "hf_agents"
version = "0.1.0"
description = ""
authors = ["Emma Bukowski <emma.bukowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
peft = "^0.15.1"
trl = "^0.16.1"
wandb = "^0.19.9"
tensorboardx = "^2.6.2.2"
torch = "^2.6.0"
smolagents = "^1.13.0"
ipywidgets = "^8.1.6"
litellm = "^1.66.1"
gradio-client = "^1.8.0"
matplotlib = "^3.10.1"
langchain-community = "^0.3.21"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
